--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="kumar.notifyme">
 
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -24,8 +26,12 @@
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
         </receiver>
-    </application>
 
-    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+        <service
+            android:name=".smsReceiverService"
+            android:enabled="true"
+            android:exported="true" >
+        </service>
+    </application>
 
 </manifest>
